# RedScrap

./: README.md  RedScrap.slnx  Requirements  build_all.py  classes.md  pyproject.toml  setup.py
RedScrap/: Program.cs  RedScrap.csproj  RedScrap.sln
RedScrap/Calls/: HomeCall.cs
RedScrap/Map/: CommentsMap.cs  HomeMap.cs  UserMap.cs
RedScrap/ReceiveData/: CommentsRec.cs  HomeRec.cs  JsonConverter.cs  Receive.cs  UsersRec.cs
RedScrap/Responses/: Comments.cs  Home.cs  JsonConverter.cs  Users.cs
RedScrap/SentData/: CommentsSent.cs  HomeSend.cs  Send.cs  UserSent.cs
RedScrap/URLs/: CommentsURL.cs  HomeURL.cs  UserURL.cs
RedScrapsLib/: RedScrap.deps.json  __init__.py  __init__.pyi
RedScrapsLib copy/: RedScrap.deps.json  __init__.py  __init__.pyi
redscrapslib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: rate_limit_log.txt  test.py
