[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redscrapslib"
version = "0.1.4"
description = "Python library for scraping Reddit data, powered by a .NET 9 backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pythonnet>=3.0.0"]

[project.urls]
Repository = "https://github.com/Vex-V/RedScrap"

[tool.setuptools.packages.find]
where = ["."]
include = ["RedScrapsLib"]

[tool.setuptools.package-data]
RedScrapsLib = ["*.dll", "*.json", "*.pyi", "py.typed"]
